Adding meme for common tasks section

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -1342,6 +1342,7 @@ public interface AppointmentManager {
                         </ul>
                     </section>
                 </section>
+
                 <section>
 
                     <section data-background-color="#4d7e65">
@@ -1386,13 +1387,7 @@ public interface AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Burdening Consumers with Common Tasks</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
-                        <aside class="notes">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                        </aside>
+                        <img src="images/dawson-problems-consuming-api.png" height=318 width=350 />
                     </section>
 
                     <section>
@@ -1489,43 +1484,6 @@ public interface Participants {
 
                 </section>
 
-                <section>
-                    <section data-background-color="#4d7e65">
-                        <h2>Lack of Adapters</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
-                        <aside class="notes">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                        </aside>
-                    </section>
-                    <section>
-                        <h2>Lack of Adapters</h2>
-                        <ul>
-                            <li>...</li>
-                            <li>...</li>
-                        </ul>
-                        <aside class="notes">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                        </aside>
-                    </section>
-                    <section data-state="slide-with-code">
-                        <h2>Code Example Slide</h2>
-                        <pre>
-                            <code data-trim>
-// code goes here with no additional spaces
-                            </code>
-                        </pre>
-                        <aside class="notes">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                        </aside>
-                    </section>
-                </section>
                 <section>
                     <h1>Summary</h1>
                     <ul>
