committing summary and code disclaimer slide

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -72,6 +72,17 @@
                     <br />
                     <small>* Only <em>some</em> of these scenarios, as we are unfortunately not wizards</small>
                 </section>
+
+                <section>
+                    <h2>Code Disclaimer</h2>
+                    <ul>
+                        <li>Exmaples will be in Java, but hopefully applicable to non-java developers</li>
+                        <li>Trivialized scenarios but based off of real examples</li>
+                        <li>Some code is omitted for display and space reasons</li>
+                        <li>Try not to get hung up on details, we will point out the significant parts</li>
+                    </ul>
+                </section>
+
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Poor Data Types / Data Type Abuse</h2>
@@ -1529,8 +1540,10 @@ public interface Participants {
                 <section>
                     <h1>Summary</h1>
                     <ul>
-                        <li></li>
-                        <li></li>
+                        <li>Very rarely will you get the chance to rewrite significant portions of the code right now</li>
+                        <li>Always strive for better-than-nothing</li>
+                        <li>If the current state is bad, consider ways that you can simplify future re-write work</li>
+                        <li>Keep pushing to improve the current state. It gets exhausting and feels like it is pointless, but it is an investment in the future.</li>
                     </ul>
                 </section>
                 <section>
