Adding some notes for the 'Why this presentation' section

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -33,6 +33,7 @@
                         <small>Created by Dustin Singleton and Brandon Rockhold</small>
                     </p>
                 </section>
+
                 <section>
                     <h2>Why this presentation?</h2>
                     <img src="images/devils-snare.gif" />
@@ -43,11 +44,13 @@
                     </ul>
                     <aside class="notes">
                         <ul>
-                            <li></li>
-                            <li></li>
+                            <li>This gif shows the Devil's Snare at work on a struggling Ronald Weasley</li>
+                            <li>The title of this presentation and the related concept of the growth of poor API's capable of strangling a code base (where the poor API's are akin to a growing Devil's Snare) are the only actual ties to the Harry Potter theme present throughout</li>
+                            <li>No awkward/forced references throughout, we promise...</li>
                         </ul>
                     </aside>
                 </section>
+
                 <section>
                     <h2>Why Should You Consider Listening to Us?</h2>
                     <ul>
@@ -61,6 +64,7 @@
                         <li>Passionate about clean code, API design, and being good code citizens in general</li>
                     </ul>
                 </section>
+
                 <section>
                     <h2>Overview / Goals</h2>
                     <ul>
