--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -80,7 +80,7 @@
                 <section>
                     <h2>Code Disclaimer</h2>
                     <ul>
-                        <li>Exmaples will be in Java, but hopefully applicable to non-java developers</li>
+                        <li>Examples will be in Java, but hopefully applicable to non-Java developers</li>
                         <li>Trivialized scenarios but based off of real examples</li>
                         <li>Some code is omitted for display and space reasons</li>
                         <li>Try not to get hung up on details, we will point out the significant parts</li>
@@ -88,10 +88,12 @@
                 </section>
 
                 <section>
+
                     <section data-background-color="#4d7e65">
                         <h2>Poor Data Types / Data Type Abuse</h2>
                         <img src="images/overly-obsessed-girlfriend-loves-your-strings.png" height=259 width=350 />
                     </section>
+
                     <section>
                         <h2>Poor Data Types / Data Type Abuse</h2>
                         <ul>
@@ -100,6 +102,7 @@
                             <li>Place unnecessary burden on consumers (if they must parse or translate)</li>
                         </ul>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Poor Data Type Example</h2>
                         <pre>
@@ -119,6 +122,7 @@ public interface RecurringAppointment {
                             </code>
                         </pre>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Consuming Poor Data Type Example</h2>
                         <pre>
@@ -149,6 +153,7 @@ public void consume(RecurringAppointment recurringAppointment) {
                             </ul>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Good Data Type Example</h2>
                         <pre>
@@ -173,6 +178,7 @@ public interface RecurringAppointment {
                                 <li></li>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Consuming Good Data Type Example</h2>
                         <pre>
@@ -198,6 +204,7 @@ public void consume(RecurringAppointment recurringAppointment) {
                                 <li></li>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Transition Example (Deprecation)</h2>
                         <pre>
@@ -228,6 +235,7 @@ public Set&lt;DayOfWeek&gt; getWeeklyRecurrenceAsSet() {
                                 <li>One passive transition option would be to add new API, such as 'getWeeklyRecurrenceAsSet' and have the implementation handle the messy details of translating the existing poor data type to the new good data type.</li>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Transition Example (Wrapper)</h2>
                         <pre>
@@ -265,6 +273,7 @@ public class RecurringAppointmentWrapper {
                             </ul>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Transition Example (Utility)</h2>
                         <pre>
@@ -300,12 +309,16 @@ public class DayOfWeekTranslator {
                             </ul>
                         </aside>
                     </section>
+
                 </section>
+
                 <section>
+
                     <section data-background-color="#4d7e65">
                         <h2>Easily Misused Collections API's</h2>
                         <img src="images/most-interesting-man-hates-his-consumers.png" height=350 width=279 />
                     </section>
+
                     <section>
                         <h2>Easily Misused Collections API's</h2>
                         <ul>
@@ -316,6 +329,7 @@ public class DayOfWeekTranslator {
                             <li>ABSOLUTELY document how the API behaves, even if you are evil</li>
                         </ul>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Evil Collections API Example</h2>
                         <pre>
@@ -338,6 +352,7 @@ public class AppointmentManager {
                             </code>
                         </pre>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Consuming Evil Collections API Example</h2>
                         <pre>
@@ -352,6 +367,7 @@ Collection&lt;Date&gt; dates = appointmentManager.getAvailableBeginTimes(new Dat
                             </code>
                         </pre>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Good Collections API Example</h2>
                         <pre>
@@ -374,6 +390,7 @@ public class AppointmentManager {
                             </code>
                         </pre>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Consuming Good Collections API Example</h2>
                         <pre>
@@ -384,9 +401,11 @@ for (Date date : appointmentManager.getAvailableBeginTimes(new Date(), pastDate)
                             </code>
                         </pre>
                     </section>
+
                 </section>
 
                 <section>
+
                     <section data-background-color="#4d7e65">
                         <h2>Inconsistent State</h2>
                         <img src="images/not-sure-fry-not-sure-about-immutability.png" height=263 width=350 />
@@ -617,6 +636,7 @@ public interface Appointment {
                             </ul>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Builder Consumer Example</h2>
                         <pre>
@@ -638,10 +658,12 @@ Appointment appointment = builder.build();
                 </section>
 
                 <section>
+
                     <section data-background-color="#4d7e65">
                         <h2>Weak Typing</h2>
                         <img src="images/y-u-no-strong-type.png" height=257 width=350 />
                     </section>
+
                     <section>
                         <h2>Weak Typing</h2>
                         <ul>
@@ -662,6 +684,7 @@ Appointment appointment = builder.build();
                                 <li>Even if it doesn't blow up at runtime, it will cause major issues with data integrity</li>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Weak Type Example</h2>
                         <pre>
@@ -691,6 +714,7 @@ public interface ParticipantScheduleManager {
                             </ul>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Consuming Weak Type Example</h2>
                         <pre>
@@ -716,6 +740,7 @@ public void consume(Appointment appointment) {
                             </ul>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Strong Type Example</h2>
                         <pre>
@@ -745,6 +770,7 @@ public interface ParticipantScheduleManager {
                             </ul>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Consuming Strong Type Example</h2>
                         <pre>
@@ -769,7 +795,9 @@ public void consume(Appointment appointment) {
                             </ul>
                         </aside>
                     </section>
+
                 </section>
+
                 <section>
 
                     <section data-background-color="#4d7e65">
@@ -1272,10 +1300,12 @@ public void consume(List&lt;AppointmentCriteria&gt; appointmentCriteria) {
                 </section>
 
                 <section>
+
                     <section data-background-color="#4d7e65">
                         <h2>Abstraction Leaks</h2>
                         <img src="images/first-world-leaked-abstraction-problems.png" height=233 width=350 />
                     </section>
+
                     <section>
                         <h2>Abstraction Leaks</h2>
                         <ul>
@@ -1296,6 +1326,7 @@ public void consume(List&lt;AppointmentCriteria&gt; appointmentCriteria) {
                                 <li></li>
                         </aside>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Common Abstraction Leak Examples</h2>
                         <pre>
@@ -1320,6 +1351,7 @@ public interface AppointmentManager {
                             </code>
                         </pre>
                     </section>
+
                     <section data-state="slide-with-code">
                         <h2>Common Abstraction Leak Examples</h2>
                         <pre>
@@ -1342,6 +1374,7 @@ public interface AppointmentManager {
                             </code>
                         </pre>
                     </section>
+
                     <section>
                         <h2>Common Abstraction Leak Indicators</h2>
                         <ul>
@@ -1356,6 +1389,7 @@ public interface AppointmentManager {
                             </li>
                         </ul>
                     </section>
+
                 </section>
 
                 <section>
@@ -1397,9 +1431,11 @@ public interface AppointmentManager {
                             </ul>
                         </aside>
                     </section>
+
                 </section>
 
                 <section>
+
                     <section data-background-color="#4d7e65">
                         <h2>Burdening Consumers with Common Tasks</h2>
                         <img src="images/dawson-problems-consuming-api.png" height=318 width=350 />
@@ -1508,9 +1544,11 @@ public interface Participants {
                         <li>Keep pushing to improve the current state. It gets exhausting and feels like it is pointless, but it is an investment in the future.</li>
                     </ul>
                 </section>
+
                 <section>
                     <h1>Questions?</h1>
                 </section>
+
                 <section>
                     <h1>Please Leave Us Feedback</h1>
                     <table>
