added encapsulation slide and edited notes

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -95,6 +95,13 @@
                     </section>
 
                     <section>
+                        <h2>What is Encapsulation (for Objects)</h2>
+                        <p>
+                            Representing logical concepts as separate objects.  
+                        </p>
+                    </section>
+
+                    <section>
                         <h2>Lack of Encapsulation</h2>
                         <ul>
                             <li>Makes it difficult to re-use concepts</li>
@@ -136,8 +143,6 @@ public class Appointment
                                         <li>Schedule of the appointment</li>
                                     </ul>
                                 </li>
-                                <li>It MAY BE true that there may only ever be one room for an Appointment, but that does not mean you should not encapsulate from the start</li>
-                                <li>Encapsulation is not just for things that you want to put in a list</li>
                             </ul>
                         </aside>
                     </section>
