--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="lib/css/monokai-sublime.css">
 
         <!-- Printing and PDF exports -->
-        <script>
+        <script type="text/javascript">
             var link = document.createElement( 'link' );
             link.rel = 'stylesheet';
             link.type = 'text/css';
@@ -1721,10 +1721,10 @@ public interface AppointmentManager {
             </div>
         </div>
 
-        <script src="lib/js/head.min.js"></script>
-        <script src="js/reveal.js"></script>
+        <script type="text/javascript" src="lib/js/head.min.js"></script>
+        <script type="text/javascript" src="js/reveal.js"></script>
 
-        <script>
+        <script type="text/javascript">
             // More info https://github.com/hakimel/reveal.js#configuration
             Reveal.initialize({
                 history: true,
